# Medmitra

./: README.md
backend/: README.md  agentic.py  app.py  output.json  pyproject.toml  requirements.txt
backend/agents/: ai_agent.py  entity_agent.py  medical_ai_agent.py  vision_agent.py
backend/core/: config.py
backend/models/: data_models.py  state_models.py
backend/parsers/: document_processor.py  llama_proc.py  parse.py  script.py
backend/routes/: case.py
backend/supabase_client/: supabase_client.py
backend/utils/: base_agent.py  entity_main.py  extractjson.py  llm_utils.py  medical_prompts.py  parserhelper.py  prompts.py
frontend/: README.md  generate_dir_structure.sh  package-lock.json  package.json  structure.md
frontend/app/: actions.ts  globals.css  layout.tsx  page.tsx
frontend/app/cases/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/performance/: page.tsx
frontend/components/cases/: case-filters.tsx  case-table.tsx  drag-drop-area.tsx
frontend/components/forms/: case-actions.tsx  case-summary-form.tsx  file-upload.tsx  patient-info-form.tsx
frontend/components/landing/: hero.tsx  theme-switcher.tsx
frontend/components/layout/: client-auth-handler.tsx  client-logout-button.tsx  footer.tsx  header-auth.tsx  navigation-links.tsx
frontend/components/ui/: badge.tsx
frontend/docs/: api-structure.md  gladia-setup.md
frontend/hooks/: use-auth.ts  use-gladia-stt.ts
frontend/lib/: api-client.ts  api-config.ts  auth-sync.ts  gladia.ts
frontend/types/: case.ts
frontend/utils/: timezone.ts
(+5 files in other folders)
