[project]
name = "medmitra-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.13",
    "groq>=0.28.0",
    "langchain>=0.3.26",
    "langchain-groq>=0.3.4",
    "langgraph>=0.4.10",
    "llama-parse>=0.6.36",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "supabase>=2.15.3",
    "uvicorn>=0.34.3",
]
